--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./Assets/CSS/Bootstrap.css">
     <link rel="stylesheet" href="./Assets/CSS/Bootstrap-grid.css">
     <script src="./JS/main.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js""></script>
     <title>HangMan Game</title>
 </head>
 
@@ -24,11 +25,11 @@
                             <h1 class="d-flex justify-content-center">Enter a letter</h1>
                             <hr>
 
-                            <input id="letter" type="text" placeholder="Pick a Letter and press [Enter]">
+                            <input id="userInput" type="text" placeholder="Pick a Letter and press [Enter]">
                             <br>
 
 
-                            <button type="button" class="btn btn-warning" value="Submit" onclick="Letter()"><strong>Guess A Letter</strong></button>
+                            <button type="button" class="btn btn-warning" value="Submit" onkeypress="return submit(event)"><strong>Guess A Letter</strong></button>
                             <hr>
                             <div class="letters d-flex justify-content-center justify-content-around" />
                             <button type="button" class="btn btn-dark">A</button>
@@ -45,25 +46,27 @@
                         </div>
                         <div>
                             <hr>
-                            <button type="button" class="btn btn-dark">A</button>
-                            <button type="button" class="btn btn-dark">B</button>
-                            <button type="button" class="btn btn-dark">C</button>
-                            <button type="button" class="btn btn-dark">D</button>
-                            <button type="button" class="btn btn-dark">E</button>
-                            <button type="button" class="btn btn-dark">F</button>
-                            <button type="button" class="btn btn-dark">G</button>
-                            <button type="button" class="btn btn-dark">H</button>
-                            <button type="button" class="btn btn-dark">I</button>
-                            <button type="button" class="btn btn-dark">J</button>
-                            <button type="button" class="btn btn-dark">K</button>
+                            <button type="button" class="btn btn-dark">L</button>
+                            <button type="button" class="btn btn-dark">M</button>
+                            <button type="button" class="btn btn-dark">N</button>
+                            <button type="button" class="btn btn-dark">O</button>
+                            <button type="button" class="btn btn-dark">P</button>
+                            <button type="button" class="btn btn-dark">Q</button>
+                            <button type="button" class="btn btn-dark">R</button>
+                            <button type="button" class="btn btn-dark">S</button>
+                            <button type="button" class="btn btn-dark">T</button>
+                            <button type="button" class="btn btn-dark">U</button>
+                            <button type="button" class="btn btn-dark">V</button>
                             <hr>
                         </div>
                         <div class="d-flex justify-content-center btn-outline-primary">
-                            <button type="button" class="btn btn-dark">H</button>
-                            <button type="button" class="btn btn-dark">I</button>
-                            <button type="button" class="btn btn-dark">J</button>
-                            <button type="button" class="btn btn-dark">K</button>
+                            <button type="button" class="btn btn-dark"> W </button>
+                            <button type="button" class="btn btn-dark"> X </button>
+                            <button type="button" class="btn btn-dark"> Y </button>
+                            <button type="button" class="btn btn-dark"> Z </button>
                         </div>
+                        <br>
+                        <button id="button-clear" class="btn-danger btn-lg" value="clear"><span>clear</span></button>
                 </div>
             </div>
             <p id="answer"></p>
