--- a/index.html
+++ b/index.html
@@ -14,67 +14,73 @@
 </head>
 
 <body>
-    <div class="container">
+    <header id="header" class="bg-dark d-flex justify-content-center text-white">
+        <h1>Guess the correct animal</h1>
+    </header>
+    <div class="container bg-dark">
         <div class="col">
             <div class="row d-flex justify-content-center">
                 <div class="">
-                    <header>
-                        <h1>Guess the correct animal</h1>
-                        <div class="jumbotron d-flex flex-column">
-                            <h1 class="d-flex justify-content-center">Enter a letter</h1>
-                            <hr>
-
-                            <input id="letter" type="text" placeholder="Pick a Letter and press [Enter]">
-                            <br>
-
-
-                            <button type="button" class="btn btn-warning" value="Submit" onclick="Letter()"><strong>Guess A Letter</strong></button>
-                            <hr>
-                            <div class="letters d-flex justify-content-center justify-content-around" />
-                            <button type="button" class="btn btn-dark">A</button>
-                            <button type="button" class="btn btn-dark">B</button>
-                            <button type="button" class="btn btn-dark">C</button>
-                            <button type="button" class="btn btn-dark">D</button>
-                            <button type="button" class="btn btn-dark">E</button>
-                            <button type="button" class="btn btn-dark">F</button>
-                            <button type="button" class="btn btn-dark">G</button>
-                            <button type="button" class="btn btn-dark">H</button>
-                            <button type="button" class="btn btn-dark">I</button>
-                            <button type="button" class="btn btn-dark">J</button>
-                            <button type="button" class="btn btn-dark">K</button>
+                    <div class="jumbotron d-flex flex-column">
+                        <h1 class="d-flex justify-content-center">Enter a letter</h1>
+                        <hr>
+                        <br>
+                        <h3 id="word-blanks" class="d-flex justify-content-center">_ _ _ _ _ _ _ _ _ </h3>
+                        <hr>
+                        <div class="letters d-flex justify-content-center justify-content-around" />
+                        <button type="button" class="btn btn-dark">A</button>
+                        <button type="button" class="btn btn-dark">B</button>
+                        <button type="button" class="btn btn-dark">C</button>
+                        <button type="button" class="btn btn-dark">D</button>
+                        <button type="button" class="btn btn-dark">E</button>
+                        <button type="button" class="btn btn-dark">F</button>
+                        <button type="button" class="btn btn-dark">G</button>
+                        <button type="button" class="btn btn-dark">H</button>
+                        <button type="button" class="btn btn-dark">I</button>
+                        <button type="button" class="btn btn-dark">J</button>
+                        <button type="button" class="btn btn-dark">K</button>
+                    </div>
+                    <div>
+                        <hr>
+                        <button type="button" class="btn btn-dark">L</button>
+                        <button type="button" class="btn btn-dark">M</button>
+                        <button type="button" class="btn btn-dark">N</button>
+                        <button type="button" class="btn btn-dark">O</button>
+                        <button type="button" class="btn btn-dark">P</button>
+                        <button type="button" class="btn btn-dark">Q</button>
+                        <button type="button" class="btn btn-dark">R</button>
+                        <button type="button" class="btn btn-dark">S</button>
+                        <button type="button" class="btn btn-dark">T</button>
+                        <button type="button" class="btn btn-dark">U</button>
+                        <hr>
+                    </div>
+                    <div class="d-flex justify-content-center btn-outline-primary">
+                        <button type="button" class="btn btn-dark">V</button>
+                        <button type="button" class="btn btn-dark">W</button>
+                        <button type="button" class="btn btn-dark">X</button>
+                        <button type="button" class="btn btn-dark">Y</button>
+                        <button type="button" class="btn btn-dark">Z</button>
+                    </div>
+                    <div>
+                        <hr>
+                        <div id="document" class="stats">
+                            <p id="answer">Correct Letters : </p>
                         </div>
                         <div>
-                            <hr>
-                            <button type="button" class="btn btn-dark">A</button>
-                            <button type="button" class="btn btn-dark">B</button>
-                            <button type="button" class="btn btn-dark">C</button>
-                            <button type="button" class="btn btn-dark">D</button>
-                            <button type="button" class="btn btn-dark">E</button>
-                            <button type="button" class="btn btn-dark">F</button>
-                            <button type="button" class="btn btn-dark">G</button>
-                            <button type="button" class="btn btn-dark">H</button>
-                            <button type="button" class="btn btn-dark">I</button>
-                            <button type="button" class="btn btn-dark">J</button>
-                            <button type="button" class="btn btn-dark">K</button>
-                            <hr>
+                            <p id="remaining">Guesses : </p>
                         </div>
-                        <div class="d-flex justify-content-center btn-outline-primary">
-                            <button type="button" class="btn btn-dark">H</button>
-                            <button type="button" class="btn btn-dark">I</button>
-                            <button type="button" class="btn btn-dark">J</button>
-                            <button type="button" class="btn btn-dark">K</button>
+                        <div>
+                            <p id="stat">Stats: </p>
                         </div>
+                        <div>
+                            <p id="win">Wins: </p>
+                        </div>
+                        <p id="loss">Losses: </p>
+                    </div>
+
                 </div>
             </div>
-            <p id="answer"></p>
-            <p id="counter"></p>
-            <p id="stat"></p>
-            <p id="winner"></p>
         </div>
-        </header>
-    </div>
-    </div>
-    </div>
     </div>
 
 </body>
