--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header id="header" class="bg-dark d-flex justify-content-center text-white">
         <h1>Guess the correct animal</h1>
     </header>
-    <div class="container bg-dark">
+    <div class="container">
         <div class="col">
             <div class="row d-flex justify-content-center">
                 <div class="">
