--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./Assets/CSS/Reset.css">
-    <link rel="stylesheet" href="./Assets/CSS/style.css">
-    <link rel="stylesheet" href="./Assets/CSS/Bootstrap.css">
-    <link rel="stylesheet" href="./Assets/CSS/Bootstrap-grid.css">
+    <link rel='stylesheet' href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+
     <script src="./JS/main.js"></script>
-    
+
     <title>HangMan Game</title>
 </head>
 
@@ -21,81 +20,81 @@
     <div class="container">
         <div class="col">
             <div class="row d-flex justify-content-center">
-                
-                    <div class="jumbotron d-flex flex-column">
-                        <h1 class="d-flex justify-content-center">Enter a letter</h1>
-                        <hr>
-                        <br>
-                        <h3 id="word-blanks" class="d-flex justify-content-center">_ _ _ _ _ _ _ _ _ </h3>
-                        <hr>
-                        <div class="letters d-flex justify-content-center justify-content-around" />
-                        <button type="button" class="btn btn-dark letter-button">A</button>
-                        <button type="button" class="btn btn-dark letter-button">B</button>
-                        <button type="button" class="btn btn-dark letter-button">C</button>
-                        <button type="button" class="btn btn-dark letter-button">D</button>
-                        <button type="button" class="btn btn-dark letter-button">E</button>
-                        <button type="button" class="btn btn-dark letter-button">F</button>
-                        <button type="button" class="btn btn-dark letter-button">G</button>
-                        <button type="button" class="btn btn-dark letter-button">H</button>
-                        <button type="button" class="btn btn-dark letter-button">I</button>
-                        <button type="button" class="btn btn-dark letter-button">J</button>
-                        <button type="button" class="btn btn-dark letter-button">K</button>
+
+                <div class="jumbotron d-flex flex-column">
+                    <h1 class="d-flex justify-content-center">Enter a letter</h1>
+                    <hr>
+                    <br>
+                    <h3 id="word-blanks" class="d-flex justify-content-center">_ _ _ _ _ _ _ _ _ </h3>
+                    <hr>
+                    <div class="letters d-flex justify-content-center justify-content-around" />
+                    <button type="button" class="btn btn-dark letter-button">A</button>
+                    <button type="button" class="btn btn-dark letter-button">B</button>
+                    <button type="button" class="btn btn-dark letter-button">C</button>
+                    <button type="button" class="btn btn-dark letter-button">D</button>
+                    <button type="button" class="btn btn-dark letter-button">E</button>
+                    <button type="button" class="btn btn-dark letter-button">F</button>
+                    <button type="button" class="btn btn-dark letter-button">G</button>
+                    <button type="button" class="btn btn-dark letter-button">H</button>
+                    <button type="button" class="btn btn-dark letter-button">I</button>
+                    <button type="button" class="btn btn-dark letter-button">J</button>
+                    <button type="button" class="btn btn-dark letter-button">K</button>
+                </div>
+                <div>
+                    <hr>
+                    <button type="button" class="btn btn-dark letter-button">L</button>
+                    <button type="button" class="btn btn-dark letter-button">M</button>
+                    <button type="button" class="btn btn-dark letter-button">N</button>
+                    <button type="button" class="btn btn-dark letter-button">O</button>
+                    <button type="button" class="btn btn-dark letter-button">P</button>
+                    <button type="button" class="btn btn-dark letter-button">Q</button>
+                    <button type="button" class="btn btn-dark letter-button">R</button>
+                    <button type="button" class="btn btn-dark letter-button">S</button>
+                    <button type="button" class="btn btn-dark letter-button">T</button>
+                    <button type="button" class="btn btn-dark letter-button">U</button>
+                    <hr>
+                </div>
+                <div class="d-flex justify-content-center btn-outline-primary">
+                    <button type="data-letter" class="btn btn-dark letter-button">V</button>
+                    <button type="button" class="btn btn-dark letter-button">W</button>
+                    <button type="button" class="btn btn-dark letter-button">X</button>
+                    <button type="button" class="btn btn-dark letter-button">Y</button>
+                    <button type="button" class="btn btn-dark letter-button">Z</button>
+                </div>
+                <div>
+                    <hr>
+                    <div id="document" class="stats">
+                        <p id="answer">Correct Letters : </p>
                     </div>
                     <div>
-                        <hr>
-                        <button type="button" class="btn btn-dark letter-button">L</button>
-                        <button type="button" class="btn btn-dark letter-button">M</button>
-                        <button type="button" class="btn btn-dark letter-button">N</button>
-                        <button type="button" class="btn btn-dark letter-button">O</button>
-                        <button type="button" class="btn btn-dark letter-button">P</button>
-                        <button type="button" class="btn btn-dark letter-button">Q</button>
-                        <button type="button" class="btn btn-dark letter-button">R</button>
-                        <button type="button" class="btn btn-dark letter-button">S</button>
-                        <button type="button" class="btn btn-dark letter-button">T</button>
-                        <button type="button" class="btn btn-dark letter-button">U</button>
-                        <hr>
-                    </div>
-                    <div class="d-flex justify-content-center btn-outline-primary">
-                        <button type="data-letter" class="btn btn-dark letter-button">V</button>
-                        <button type="button" class="btn btn-dark letter-button">W</button>
-                        <button type="button" class="btn btn-dark letter-button">X</button>
-                        <button type="button" class="btn btn-dark letter-button">Y</button>
-                        <button type="button" class="btn btn-dark letter-button">Z</button>
+                        <p id="remaining">Guesses : </p>
                     </div>
                     <div>
-                        <hr>
-                        <div id="document" class="stats">
-                            <p id="answer">Correct Letters : </p>
-                        </div>
-                        <div>
-                            <p id="remaining">Guesses : </p>
-                        </div>
-                        <div>
-                            <p id="stat">Stats: </p>
-                        </div>
-                        <div>
-                            <p id="win">Wins: </p>
-                        </div>
-                        <p id="loss">Losses: </p>
+                        <p id="stat">Stats: </p>
                     </div>
+                    <div>
+                        <p id="win">Wins: </p>
+                    </div>
+                    <p id="loss">Losses: </p>
                 </div>
             </div>
         </div>
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"">
+    </div>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" ">
 
     $(document).ready(function () {
         for (i = 0; i < userInput.length; i++) {
             var letterBtn = $('.letter-button');
-            letterBtn.attr("data-letter", letters[i]);
+            letterBtn.attr("data-letter ", letters[i]);
             letterBtn.text(letters[i]);
             $('#word-blanks').append(letterBtn);
         }
     });
 
-    $('.letter-button').on("click", function () {
-        var correctAnswer = $("#word-blanks");
-        correctAnswer.text($(this).attr("data-letter"));
-        $("#display").append(correctAnswer);
+    $('.letter-button').on("click ", function () {
+        var correctAnswer = $("#word-blanks ");
+        correctAnswer.text($(this).attr("data-letter "));
+        $("#display ").append(correctAnswer);
     });
 
 
