trying to simply finish

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <p id="remaining " class="m-2 ">Guesses Remaining : </p>
                 </span>
                 <span class="row border border-dark bg-light mt-4 p4 ">
-                    <p id="stat " class="m-2 ">Stats: </p>
+                    <p id="wrong " class="m-2 ">Wrong Guesses: </p>
                 </span>
                 <span class="row border border-success bg-light mt-4 ">
                     <p id="win " class="m-2 ">Wins: </p>
